<resources>
    <string name="app_name">SoFitThisWeekv2</string>
    <string name="STATYSTKI">STATYSTKI</string>
    <string name="TRENING">TRENING</string>
    <string name="ODŻYWIANIE">ODŻYWIANIE</string>
    <string name="KALENDARZ">KALENDARZ</string>
    <string name="TwojaNazwa">Twoja nazwa:</string>
    <string name="Email">E-mail:</string>
    <string name="Wzrost">Wzrost:</string>
    <string name="Waga">Waga:</string>
    <string name="TwójProfil">Twój profil</string>
    <string name="prevName">MojaNazwa</string>
    <string name="prevEmail">myemail@example.com</string>
    <string name="prevHeight">175</string>
    <string name="prevWeight">75</string>
    <string name="editProfile">edytuj profil</string>
    <string name="saveChanges">zapisz zmiany</string>
    <string name="statsTitle">Statystyki</string>
    <string name="calendarLabel">Kalendarz</string>
    <string name="nutritionLabel">Odżywianie</string>
    <string name="trainingLabel">Trening</string>
    <string name="profileButtonLabel">PROFIL</string>
    <string name="caloriesLabel">KALORIE</string>
    <string name="proteinLabel">BIAŁKO</string>
    <string name="fatsLabel">TŁUSZCZE</string>
    <string name="carbsLabel">WĘGLOWODANY</string>
    <string name="addProduct">DODAJ\nPRODUKT</string>
    <string name="caloriesGoal">DOSTOSUJ CEL\nKALORYCZNY</string>
    <string name="changeGoalLabel">Dostosuj swój cel</string>
    <string name="caloriesCountLabel">Cel kaloryczny</string>
    <string name="proteinGoal">Białko [%]</string>
    <string name="fatsCount">Tłuszcze [%]</string>
    <string name="carbsGoal">Węglowodany [%]</string>
    <string name="macroError">Ilość makro elementów nie sumuję się do 100%!!!</string>
    <string name="applyGoalButton">Zmień cel</string>
    <string name="nullError">Jedna z pozycji nie została uzupełniona!!!</string>
    <string name="addProductLabel">Dodaj spożyty produkt</string>
    <string name="weight">"Gramatura: "</string>
    <string name="gramUnit">g</string>
    <string name="productCaloriesLabel">Kalorie:</string>
    <string name="productProteinLabel">Białko:</string>
    <string name="productFatsLabel">Tłuszcze:</string>
    <string name="productCarbsLabel">Węglowodany:</string>
    <string name="productMacroLabel">Wartości odżywcze w 100g:</string>
    <string name="buttonAddProduct">Dodaj produkt\ndo podsumowania\ndziennego</string>
    <string name="caloriesUnit">kcal</string>
    <string name="createTraining">Utwórz trening</string>
    <string name="mergeIntoTraining">Połącz ćwiczenia w trening</string>
    <string name="addExercise">Dodaj ćwiczenie</string>
    <string name="exerciseName">Nazwa ćwiczenia</string>
    <string name="kgUnit">kg</string>
    <string name="repWeight">Obciążenie:</string>
    <string name="createExerciseLabel">Utwórz ćwiczenie</string>
    <string name="exerciseNameLabel">"Nazwa ćwiczenia: "</string>
    <string name="setsNumberLabel">"Ilość serii: "</string>
    <string name="repsNumberLabel">"Ilość powtórzeń: "</string>
    <string name="exerciseWeightLabel">"Obciążenie: "</string>
    <string name="bAddNewExercise">Dodaj nowe ćwiczenie</string>
    <string name="createRoutine">Utwórz rutynę</string>
    <string name="trainingType">Rodzaj treningu:</string>
    <string name="chooseDay">Wybierz dni tygodnia:</string>
    <string name="monday">poniedziałek</string>
    <string name="tuesday">wtorek</string>
    <string name="wednesday">środa</string>
    <string name="thursday">czwartek</string>
    <string name="friday">piątek</string>
    <string name="saturday">sobota</string>
    <string name="sunday">niedziela</string>
    <string name="pickStartDate">Wybierz datę rozpoczęcia</string>
    <string name="pickEndDate">Wybierz datę zakończenia</string>
    <string name="startDate">Data rozpoczęcia:</string>
    <string name="endDate">Data zakończenia:</string>
    <string name="saveRoutine">Dodaj rutynę do kalendarza</string>
    <string name="trainingsToday">Dzisiejsze treningi:</string>
    <string name="totalTrainingsCompleted">Liczba ukończonych treningów:</string>
    <string name="BMI">BMI (Body Mass Index):</string>
    <string name="bodyMassLinear">Wykres masy ciała (ostatnie 30 dni):</string>
</resources>